# rudy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-plz.toml  rust-toolchain.toml
crates/rudy-dwarf/: CHANGELOG.md  Cargo.toml
crates/rudy-dwarf/src/: address_tree.rs  cu.rs  die.rs  error.rs  expressions.rs  file.rs  index.rs  lib.rs  modules.rs  parser.rs  symbols.rs  test_utils.rs  types.rs  unit.rs  utils.rs  visitor.rs
crates/rudy-dwarf/src/address/: mod.rs  resolution.rs
crates/rudy-dwarf/tests/: example_visitor.rs
crates/rudy-parser/: CHANGELOG.md  Cargo.toml
crates/rudy-parser/src/: expressions.rs  lib.rs  types.rs
rdi-lldb/: CHANGELOG.md  Cargo.toml  demo.md
rdi-lldb/python/: rdi_lldb.py  rdi_lldb_client.py
rdi-lldb/src/: evaluator.rs  expression.rs  main.rs  protocol.rs  server.rs  session.rs
rudy-db/: CHANGELOG.md  Cargo.toml
rudy-db/benches/: salsa_demo.rs
rudy-db/examples/: lldb_demo.rs  salsa_events_demo.rs  simple_test.rs
rudy-db/scripts/: generate_test_artifacts.sh
rudy-db/src/: address_tree.rs  data.rs  database.rs  debug_info.rs  expressions.rs  file.rs  function_discovery.rs  index.rs  lib.rs  outputs.rs  query.rs  synthetic_methods.rs  test_utils.rs  types.rs
rudy-db/src/dwarf/: die.rs  expressions.rs  index.rs  mod.rs  names.rs  navigation.rs  parser.rs  unit.rs  utils.rs  visitor.rs
rudy-db/src/index/: symbols.rs
rudy-db/test-artifacts/aarch64-apple-darwin/: lldb_demo  simple_test
rudy-db/test-artifacts/aarch64-unknown-linux-gnu/: lldb_demo  simple_test
rudy-db/test-artifacts/x86_64-apple-darwin/: lldb_demo  simple_test
rudy-db/test-artifacts/x86_64-unknown-linux-gnu/: lldb_demo  simple_test
rudy-db/tests/: README.md  dynamic_tests.rs  incremental_data_test.rs  live_introspection.rs  mod.rs  resolve.rs  simple_resolve_test.rs  static_tests.rs
rudy-db/tests/common/: definitions.rs  mod.rs
rudy-db/tests/snapshots/: btreemap_type@small.snap  enum_type_resolution-2.snap  enum_type_resolution-3.snap  enum_type_resolution-4.snap  enum_type_resolution-5.snap  enum_type_resolution.snap  enum_type_resolution@aarch64-apple-darwin-2.snap  enum_type_resolution@aarch64-apple-darwin-3.snap  enum_type_resolution@aarch64-apple-darwin-4.snap  enum_type_resolution@aarch64-apple-darwin-5.snap  enum_type_resolution@aarch64-apple-darwin.snap  enum_type_resolution@aarch64-unknown-linux-gnu-2.snap  enum_type_resolution@aarch64-unknown-linux-gnu-3.snap  enum_type_resolution@aarch64-unknown-linux-gnu-4.snap  enum_type_resolution@aarch64-unknown-linux-gnu-5.snap  enum_type_resolution@aarch64-unknown-linux-gnu.snap  enum_type_resolution@x86_64-apple-darwin-2.snap  enum_type_resolution@x86_64-apple-darwin-3.snap  enum_type_resolution@x86_64-apple-darwin-4.snap  enum_type_resolution@x86_64-apple-darwin-5.snap  enum_type_resolution@x86_64-apple-darwin.snap  enum_type_resolution@x86_64-unknown-linux-gnu-2.snap  enum_type_resolution@x86_64-unknown-linux-gnu-3.snap  enum_type_resolution@x86_64-unknown-linux-gnu-4.snap  enum_type_resolution@x86_64-unknown-linux-gnu-5.snap  enum_type_resolution@x86_64-unknown-linux-gnu.snap  function_discovery@aarch64-apple-darwin-2.snap  function_discovery@aarch64-apple-darwin-3.snap  function_discovery@aarch64-apple-darwin.snap  function_discovery@aarch64-unknown-linux-gnu-2.snap  function_discovery@aarch64-unknown-linux-gnu-3.snap  function_discovery@aarch64-unknown-linux-gnu.snap  function_discovery@x86_64-apple-darwin-2.snap  function_discovery@x86_64-apple-darwin-3.snap  function_discovery@x86_64-apple-darwin.snap  function_discovery@x86_64-unknown-linux-gnu-2.snap  function_discovery@x86_64-unknown-linux-gnu-3.snap  function_discovery@x86_64-unknown-linux-gnu.snap  generated_benchmarks@large-2.snap  generated_benchmarks@large-3.snap  (+97 more)
rudy-lldb/: CHANGELOG.md  Cargo.toml  demo.md
rudy-lldb/python/: rudy_lldb.py
rudy-lldb/src/: evaluator.rs  main.rs  protocol.rs  server.rs
rudy-lldb/tests/: function_discovery_tests.rs
rust-debuginfo/: CHANGELOG.md  Cargo.toml  README.md
rust-debuginfo/benches/: generate_test_binaries.rs  run_all.sh
rust-debuginfo/examples/: LLDB_INTEGRATION.md  lldb_demo.rs  lldb_server.rs  pretty_printer.rs  rust_debuginfo_lldb.py
rust-debuginfo/src/: address_tree.rs  data.rs  database.rs  debug_info.rs  file.rs  index.rs  lib.rs  outputs.rs  query.rs  typedef.rs  types.rs
rust-debuginfo/src/dwarf/: cu.rs  die.rs  expressions.rs  index.rs  loader.rs  mod.rs  names.rs  navigation.rs  parser.rs  unit.rs  visitor.rs
rust-debuginfo/src/index/: symbols.rs
rust-debuginfo/tests/: live_introspection.rs  mod.rs  simple_resolve_test.rs
rust-debuginfo/tests/snapshots/: btreemap_simple@small.snap  btreemap_type@small.snap  btreemap_type@small.snap.new  enum_type_resolution-2.snap  enum_type_resolution-3.snap  enum_type_resolution-4.snap  enum_type_resolution-5.snap  generated_benchmarks@large-3.snap  generated_benchmarks@large-4.snap  generated_benchmarks@large-5.snap  generated_benchmarks@large.snap  generated_benchmarks@medium-3.snap  generated_benchmarks@medium-4.snap  generated_benchmarks@medium-5.snap  generated_benchmarks@medium-6.snap  generated_benchmarks@medium.snap  generated_benchmarks@small-2.snap  generated_benchmarks@small-3.snap  generated_benchmarks@small-4.snap  generated_benchmarks@small-5.snap  generated_benchmarks@small-6.snap  generated_benchmarks@small.snap  load_file@aarch64-apple-darwin.snap  load_file@aarch64-unknown-linux-gnu.snap  load_file@x86_64-apple-darwin.snap  load_file@x86_64-unknown-linux-gnu.snap  method_discovery@small.snap  resolve_function@aarch64-apple-darwin.snap  resolve_function@aarch64-unknown-linux-gnu-2.snap  resolve_function@aarch64-unknown-linux-gnu.snap  resolve_function@x86_64-apple-darwin.snap  resolve_function@x86_64-unknown-linux-gnu-2.snap  resolve_function@x86_64-unknown-linux-gnu.snap  resolve_position@aarch64-apple-darwin-2.snap  resolve_position@aarch64-apple-darwin.snap  resolve_position@x86_64-apple-darwin.snap  resolve_position@x86_64-unknown-linux-gnu.snap  test_struct_with_btreemap@small.snap
(+289 files in other folders)
