[workspace]
members = ["crates/*", "rudy-lldb", "rudy-db", "xtask"]
resolver = "3"

[workspace.dependencies]
# internal deps
rudy-db = { version = "0.0.8", path = "rudy-db" }
rudy-dwarf = { version = "0.4.0", path = "crates/rudy-dwarf" }
rudy-types = { version = "0.4", path = "crates/rudy-types" }
rudy-parser = { version = "0.4", path = "crates/rudy-parser" }
rudy-test-examples = { path = "crates/rudy-test-examples" }
test-utils = { path = "crates/test-utils" }

# external deps
anyhow = "1.0.97"
insta = { version = "1.42.2", features = ["filters"] }
itertools = "0.14.0"
pretty_assertions = "1.4.1"
rstest = "0.25"
rstest_reuse = { version = "0.7" }
salsa = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
rudy-parser.opt-level = 3
salsa.opt-level = 3
gimli.opt-level = 3
