[package]
name = "rudy-db"
version = "0.0.9"
edition = "2024"
authors = ["Sam Scott"]
description = "A user-friendly library for interacting with debugging information of Rust compiled artifacts using DWARF"
repository = "https://github.com/samscott89/rudy"
documentation = "https://docs.rs/rudy-db"
homepage = "https://github.com/samscott89/rudy"
license = "MIT"
readme = "../README.md"
keywords = ["debug", "dwarf", "debuginfo", "debugging", "rust"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
itertools.workspace = true
rudy-dwarf.workspace = true
rudy-types.workspace = true
rudy-parser.workspace = true
rustc-demangle = "0.1"
salsa.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
divan = "0.1"
insta = { workspace = true, features = ["filters"] }
pretty_assertions.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
serde_json = "1.0"
test-utils.workspace = true


[[bin]]
name = "bench_comparison"
path = "bin/bench_comparison.rs"
test = false

[[bin]]
name = "bench_operations"
path = "bin/bench_operations.rs"
test = false

[[bench]]
name = "salsa_demo"
harness = false
