[package]
name = "rudy-lldb"
version = "0.1.8"
edition = "2024"
default-run = "rudy-lldb-server"
description = "Rudy LLDB server for debugging Rust programs"
license = "MIT"

[dependencies]
rudy-db = { workspace = true }
rudy-types = { workspace = true }
rudy-parser = { workspace = true }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3.0", features = ["json"] }

[[bin]]
name = "rudy-lldb-server"
path = "src/main.rs"
