[package]
name = "rust-debuginfo"
version = "0.0.1"
edition = "2024"
authors = ["Sam Scott"]
description = "A user-friendly library for interacting with debugging information of Rust compiled artifacts using DWARF"
repository = "https://github.com/samscott89/rust_debuginfo"
documentation = "https://docs.rs/rust-debuginfo"
homepage = "https://github.com/samscott89/rust_debuginfo"
license = "MIT"
readme = "README.md"
keywords = ["debug", "dwarf", "debuginfo", "debugging", "rust"]
categories = ["debugging", "development-tools", "parser-implementations"]

[dependencies]
anyhow = "1.0.97"
chalk-ir = "0.100.0"
gimli = { version = "0.31.1", default-features = false, features = [
    "std",
    "read",
    "endian-reader",
] }
itertools = "0.14.0"
memmap2 = "0.9.5"
object = { git = "https://github.com/gimli-rs/object", rev = "a74579249e21ab8fcd3a86be588de336f18297cb" }
rustc-demangle = "0.1"
salsa = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
unsynn = { version = "0.1.1" }


[[bin]]
name = "bench_comparison"
path = "bin/bench_comparison.rs"
test = false

[[bin]]
name = "bench_operations"
path = "bin/bench_operations.rs"
test = false

[[bin]]
name = "generate_test_binaries"
path = "bin/generate_test_binaries.rs"
test = false

[dev-dependencies]
insta = { version = "1.42.2", features = ["filters"] }
pretty_assertions = "1.4.1"
rstest = "0.25"
rstest_reuse = { version = "0.7" }
